--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./assets/javascript/vendor/underscore.js"></script>
     <script src="./assets/javascript/vendor/backbone.js"></script>
     <script src="./assets/javascript/vendor/backbone.marionette.js"></script>
+    <script src="./assets/javascript/application.js"></script>
 
     <link href="./assets/css/bootstrap.css" rel="stylesheet">
     <link href="./assets/css/custom.css" rel="stylesheet">
