--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
       <tbody>
       </tbody>
     </script>
+
+    <script type="text/template" id="angry_cat-template">
+      <td><%= name ></td>
+    </script>
   </body>
 </html>
