Initialize and populate app, fix vendor files

--- a/index.html
+++ b/index.html
@@ -6,21 +6,19 @@
 
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js"></script>
-    <script src="./assets/javascript/vendor/underscore.js"></script>
-    <script src="./assets/javascript/vendor/backbone.js"></script>
-    <script src="./assets/javascript/vendor/backbone.marionette.js"></script>
-    <script src="./assets/javascript/application.js"></script>
+    <script src="./assets/javascripts/vendor/underscore.js"></script>
+    <script src="./assets/javascripts/vendor/backbone.js"></script>
+    <script src="./assets/javascripts/vendor/backbone.marionette.js"></script>
 
     <link href="./assets/css/bootstrap.css" rel="stylesheet">
     <link href="./assets/css/custom.css" rel="stylesheet">
+
+    <script src="./assets/javascripts/application.js"></script>
   </head>
   <body>
-    <div id="content">
-    </div>
-
     <script type="text/template" id="angry_cats-template">
       <thead>
-        <tr class="header">
+        <tr class='header'>
           <th>Name</th>
         </tr>
       </thead>
@@ -29,7 +27,10 @@
     </script>
 
     <script type="text/template" id="angry_cat-template">
-      <td><%= name ></td>
+      <td><%= name %></td>
     </script>
+
+    <div id="content">
+    </div>
   </body>
 </html>
