--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <thead>
         <tr class='header'>
           <th>Name</th>
+          <th>Image</th>
         </tr>
       </thead>
       <tbody>
@@ -28,6 +29,7 @@
 
     <script type="text/template" id="angry_cat-template">
       <td><%= name %></td>
+      <td><img class="angry_cat_pic" src="<%= image_path %>" /></td>
     </script>
 
     <div id="content">
