--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script type="text/template" id="angry_cats-template">
       <thead>
         <tr class='header'>
+          <th>Rank</th>
           <th>Name</th>
           <th>Image</th>
         </tr>
@@ -30,6 +31,10 @@
     <script type="text/template" id="angry_cat-template">
       <td><%= name %></td>
       <td><img class="angry_cat_pic" src="<%= image_path %>" /></td>
+      <td>
+        <div class="rank_up"><img src="assets/images/up.gif"></div>
+        <div class="rank_down"><img src="assets/images/down.gif"></div>
+      </td>
     </script>
 
     <div id="content">
