Implement voting feature

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <thead>
         <tr class='header'>
           <th>Rank</th>
+          <th>Votes</th>
           <th>Name</th>
           <th>Image</th>
         </tr>
@@ -33,6 +34,7 @@
         <div class="rank_up"><img src="assets/images/up.gif"></div>
         <div class="rank_down"><img src="assets/images/down.gif"></div>
       </td>
+      <td><%= votes %></td>
       <td><%= name %></td>
       <td><img class="angry_cat_pic" src="<%= image_path %>" /></td>
     </script>
