--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <th>Votes</th>
           <th>Name</th>
           <th>Image</th>
+          <th>Disqualify</th>
         </tr>
       </thead>
       <tbody>
@@ -37,6 +38,7 @@
       <td><%= votes %></td>
       <td><%= name %></td>
       <td><img class="angry_cat_pic" src="<%= image_path %>" /></td>
+      <td><a href="#" class="disqualify">Disqualify</a></td>
     </script>
 
     <div id="content">
